# multichat

./: Makefile  README.md  pyproject.toml
src/multichat/: broadcast.py  interface.ui  main.py  multicast.py  terminal_app.py  ui_interface.py  utils.py  values.py  window_app.py
